--- a/CursoHtml/css/Tables.css
+++ b/CursoHtml/css/Tables.css
@@ -16,7 +16,7 @@ table, th, td {
   width: 25%;
   border: 1px solid black;
 }
-th, td: {
+th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
