--- a/Curso JavaScript/Framework/Jquery/myCss-style.css
+++ b/Curso JavaScript/Framework/Jquery/myCss-style.css
@@ -58,13 +58,16 @@ div.w3-panel {
 
 button#btn, #btn2, #btn3, #btn4 {
     border: none;
-    background-color: #4CAF50;
+    background-color: #00B89C;
     border-radius: 3px; 
     cursor: pointer;
     color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 10px;
-    margin: 10px 0;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding: 7px 10px;
+    margin: 10px 5px;
 }
 
 a#link {
@@ -79,7 +82,6 @@ hr.break {
 
 p[id] {
     color: crimson;
-    font-weight: bold;
 }
 
 .w3-warning{
@@ -140,11 +142,26 @@ hr.break {
     margin: 30px 0;
 }
 
-p[id] {
-    color: crimson;
+.w3-warning{
+    background-color:#ffdddd;border-left:6px solid #f44336
+}
+
+div.panel {
+    background: -moz-linear-gradient(rgb(19, 132, 197), rgb(25, 129, 189));
+    background: -webkit-linear-gradient(rgb(19, 132, 197), rgb(25, 129, 189));
+    padding: 12px;
+    color: white;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
 }
 
-.w3-warning{
-    background-color:#ffdddd;border-left:6px solid #f44336
+div.workspace {
+    border: 0px solid black;
+    border-radius: 3px;
+    background-color: rgb(243, 233, 220);
+    padding: 10px 40px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    position: relative;
 }
