--- a/Curso JavaScript/Framework/Jquery/myCss-style.css
+++ b/Curso JavaScript/Framework/Jquery/myCss-style.css
@@ -1,15 +1,46 @@
 @import url("https://www.w3schools.com/w3css/4/w3.css");
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,500i,700');
+
+
+:root {
+    --font-size-h1: 34px;
+    --font-size-h2: 30px;
+    --font-family: 'Roboto', sans-serif;
+    --text-align: center;
+    --font-weight-400: 400;
+    --font-weight-500: 500;
+}
 
 html, body {
     width: 75%;
     margin: 20px auto;
     font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    counter-reset: indice;
 }
 
-.h1-ro, .h2-ro {
-    font-weight: 500;
-    text-align: center;
+.h1-ro::before {
+    counter-increment: indice;
+    content: "Indice " counter(indice) ": ";
+}
+
+.h1-ro {
+    font-size: var(--font-size-h1);
+    font-family: var(--font-family);
+    text-align: var(--text-align);
+    font-weight: var(--font-weight-500);
+}
+
+.h2-ro::before {
+    counter-increment: indice;
+    content: "Indice " counter(indice) ": ";
+}
+
+.h2-ro {
+    font-size: var(--font-size-h2);
+    font-family: var(--font-family);
+    text-align: var(--text-align);
+    font-weight: var(--font-weight-400);
 }
 
 .w3-codespan {
